build(app): squashed some annoying issues

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,10 +1,6 @@
 // Screen
 @import "../../node_modules/reset-css/sass/reset";
 @import "colors";
-@import "mixins";
-@import "lines";
-@import "svgs";
-@import "iconmoon";
 
 $ani-duration: 0.6s;
 //$ani-delay: 0.5s;
@@ -23,15 +19,13 @@ body{
     min-width: 320px;
     max-width: $content-width-max;
     margin: 0 auto;
-    color: $grey-dark;
 
     font-size: 1.8rem;
     line-height: 2.7rem;
     font-family: 'Open Sans', sans-serif;
 
-    background-color: $white;
+    background-color: #fff;
     background-attachment: fixed;
-    background-image: $background_image;
 }
 
 h1, h2, h3, h4, h5, h6{ font-weight: 300; }
@@ -73,7 +67,6 @@ ul{
     list-style: none;
 
     li:before{
-        @include circle($grey-dark);
         margin: 9px 0 1px -18px;
     }
 }
@@ -119,12 +112,12 @@ img{
 }
 
 .header, .footer{
-    @include card();
+
     padding: 10px 0px;
     display: flex;
 
     a{
-        @include link();
+
         padding: 5px 10px;
         margin: 0 12px 0 7px;
     }
@@ -150,112 +143,7 @@ img{
     margin-bottom: 30px;
 }
 
-.logo{ padding: 1.25rem; }
-
-.homepage, .post, .posts-summary, .cv, .page-not-found{
-    grid-area: main;
-}
-
-    
-.post, .card{
-    @include card();
-    padding-bottom: 30px;
-    
-    display: grid;
-    grid-template-columns: 4% 1fr;
-
-    p, ul, ol, table, div{ grid-column: 2; }
-    h1, h2, h3, h4, h5, h6, hr, time, pre{ grid-column: 1 / span 2; }
-}
-
-.card{ grid-column: 2; }
-.posts-summary .card{
-    position: relative;
-    h2 > a{ text-decoration: none; }
-}
-
-.post-link{
-    @include card();
-    overflow: hidden;
-
-    time{ float: right; }
-    a{ text-decoration: none; }
-}
-
-.post-title{
-    @include card();
-    display: inline-block;
-
-    h2{ padding: 0; }
-}
-
-.readMore{
-    position: absolute;
-    right: 20px;
-    bottom: 15px;
-}
-
-.pagination{
-    grid-area: pagination;
-    justify-self: center;
-}
-
-.previous, .next{
-    @include card();
-        
-    width: 100%;
-    padding: 10px 15px;
-    display: inline-block;
-    text-align: center;
-    text-decoration: none;
-}
-
-.dashboard{
-    @include card();
-    
-    padding:0;
-    align-self: start;
-}
-
-.cv{
-    display: grid;
-    grid-template-columns: 2% 1fr 2%;
-
-    h1{ justify-self: center; }
-    h2{ justify-self: start; }
-    h1, h2{
-      @include card();
-      grid-column: 2;
-      }
-        
-    h3{ margin-bottom: 5px; }
-    table{ margin-bottom: 15px; }
-    p{
-        padding: 0;
-        em{
-            display: block;
-            padding-bottom: 15px;
-        }
-    }
-        
-    ul{
-        padding-bottom: 15px;
-        &:before{ white-space: pre; }
-        &:last-child{ padding-bottom: 0; }
-            
-        li span:before{
-            @include circle($grey-dark);
-            position: relative;
-            bottom: 1px;
-        }
-    }
-}
-/* wildcard needed for generated divs... specifically for cv page */
-div[class^='outline']{ display:contents; }
-
 .page-not-found{
-    @include card();
-    
     text-align: center;
     padding: 100px 15px;
     
@@ -288,28 +176,6 @@ div[class^='outline']{ display:contents; }
         ". . footer footer .";
     }
 
-    .post{ grid-template-columns: 0.5fr 1fr 7fr 1fr 0.5fr; }
-    .card{ grid-template-columns: 0.5fr 0.5fr 8fr 0.5fr 0.5fr; }
-    .cv{
-        grid-template-columns: 0.5fr 1fr 8fr 1fr 0.5fr;
-        h1, h2{ grid-column: 1 / span 5; }
-        .card{ grid-column: 3 / span 3;}
-        h2{ margin-top: 30px; }
-    }
-
-    .post, .card{
-        p, ul, ol, table, div{ grid-column: 3 / 5; }
-        h1, h2, h3, h4, h5, h6, hr, time, pre{ grid-column: 2 / span 3; }
-    }
-        
-    .homepage{
-        display: grid;
-        grid-template-columns: 5% 50% 15px 1fr 5%;
-    }
-        
-    .dashboard{ grid-column: 1 / span 2; }
-    .post-list{ grid-column: 4 / span 2; }
-
     img { max-width:40%; }
 
     h1, h2, h3, h4, h5, h6{ padding-top: 15px; }
@@ -331,17 +197,4 @@ div[class^='outline']{ display:contents; }
 }
 
 @media only screen and (min-width: $breakpoint-wide) {
-    .post-list{
-        display: grid;
-        grid-template-columns: 1fr 8fr;
-        justify-items: start;
-
-        grid-auto-rows: minmax(min-content, max-content);
-    }
-
-    .post-title{ grid-column: 1 / span 2; }
-    .post-link{
-        grid-column: 2 / span 1;
-        justify-self: stretch;
-    }
 }
